# pallet_truck

./: .gitmodules  README.md
binaries/: ros-kinetic-ackermann-drive-controller_0.0.0-0xenial_amd64.deb  ros-kinetic-rcomponent_1.1.0-0xenial_amd64.deb  ros-kinetic-robotnik-docker_1.0.0-0xenial_amd64.deb  ros-kinetic-robotnik-move_1.0.0-0xenial_amd64.deb  (+9 more)
hr_recycler_common/: README.md
hr_recycler_common/hr_recycler_description/: CMakeLists.txt  package.xml
hr_recycler_common/hr_recycler_description/launch/: hr_recycler_rviz.launch  hr_recycler_state.launch
hr_recycler_common/hr_recycler_description/meshes/bases/: base.stl  hr_recycler_base.dae  hr_recycler_base.stl
hr_recycler_common/hr_recycler_description/meshes/elevator/: hr_recycler_elevator.dae  hr_recycler_elevator.stl  hr_recycler_forks.stl  single_fork.stl
hr_recycler_common/hr_recycler_description/meshes/wheels/: HR_recycler_steer.stl  HR_recycler_traction.stl  HR_recycler_wheel.stl  hr_recycler_rubber_wheel.stl
hr_recycler_common/hr_recycler_description/robots/: hr_recycler_std.urdf.xacro
hr_recycler_common/hr_recycler_description/urdf/: common.gazebo.xacro  inertia.urdf.xacro
hr_recycler_common/hr_recycler_description/urdf/bases/: hr_recycler.urdf.xacro
hr_recycler_common/hr_recycler_description/urdf/elevator/: both_elevator.urdf.xacro  elevator.transmission.xacro  elevator.urdf.xacro
hr_recycler_common/hr_recycler_description/urdf/epal_pallet/: epal_pallet.urdf.xacro
hr_recycler_common/hr_recycler_description/urdf/wheels/: motor_wheel.urdf.xacro  omni_wheel.urdf.xacro  rubber_wheel.gazebo.xacro  rubber_wheel.urdf.xacro
hr_recycler_sim/hr_recycler_sim/: CMakeLists.txt  package.xml
pallet_truck_common/pallet_truck_control/: CMakeLists.txt  package.xml
pallet_truck_common/pallet_truck_control/config/: pallet_truck_control.yaml  pallet_truck_pid.yaml
pallet_truck_common/pallet_truck_control/launch/: pallet_truck_control.launch
pallet_truck_common/pallet_truck_description/: CMakeLists.txt  package.xml
pallet_truck_common/pallet_truck_description/launch/: pallet_truck_rviz.launch  pallet_truck_state.launch
pallet_truck_common/pallet_truck_description/meshes/bases/: battery_case.stl  cover.stl  pallet_truck_base_forks.stl
pallet_truck_common/pallet_truck_description/meshes/elevator/: single_fork.stl
pallet_truck_common/pallet_truck_description/meshes/sensor/: rs_lidar.stl  scan.stl
pallet_truck_common/pallet_truck_description/meshes/wheels/: pallet_truck_omni_wheel.stl  pallet_truck_rubber_wheel.dae  pallet_truck_wheel.stl
pallet_truck_common/pallet_truck_description/robots/: pallet_truck_std.urdf.xacro
pallet_truck_common/pallet_truck_description/urdf/: common.gazebo.xacro  inertia.urdf.xacro
pallet_truck_common/pallet_truck_description/urdf/bases/: battery_case.urdf.xacro  front_case.urdf.xacro  pallet_truck.urdf.xacro  protection.urdf.xacro
pallet_truck_common/pallet_truck_description/urdf/elevator/: elevator.gazebo.xacro  elevator.urdf.xacro  fork.urdf.xacro
pallet_truck_common/pallet_truck_description/urdf/epal_pallet/: epal_pallet.urdf.xacro
pallet_truck_common/pallet_truck_description/urdf/led/: led.urdf.xacro  led2.urdf.xacro
pallet_truck_common/pallet_truck_description/urdf/projector/: projector.urdf.xacro
pallet_truck_common/pallet_truck_description/urdf/wheels/: additional_wheel.urdf.xacro  castor_wheel.urdf.xacro  fork_wheel.urdf.xacro  motor_wheel.urdf.xacro  omni_wheel.urdf.xacro  rubber_wheel.urdf.xacro
pallet_truck_common/pallet_truck_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
pallet_truck_common/pallet_truck_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  eband_global_costmap_params.yaml  global_costmap_params_map.yaml  local_costmap_params.yaml  move_base_params.yaml  scan_filter.yaml  teb_local_planner_diff_params.yaml  teb_local_planner_omni_params.yaml
pallet_truck_common/pallet_truck_navigation/config/costmaps/: costmap_common_params.yaml  local_costmap_params.yaml
pallet_truck_common/pallet_truck_navigation/config/dockers/: diff_docker.yaml
pallet_truck_common/pallet_truck_navigation/config/global_planners/: global_global_planner_params.yaml
pallet_truck_common/pallet_truck_navigation/config/local_planners/: teb_local_planner_steel_params.yaml
pallet_truck_common/pallet_truck_navigation/launch/: dockers.launch  move.launch  move_base.launch  move_base_eband.launch  move_base_teb.launch  navigation_complete.launch  rgbd_to_laserscan.launch  rviz_satellite.launch  scan_filter.launch  tf_publishers.launch
pallet_truck_sim/pallet_truck_sim/: CMakeLists.txt  package.xml
rb_ares_common/rb_ares_control/: CMakeLists.txt  package.xml
rb_ares_common/rb_ares_control/config/: rb_ares_pid.yaml  twist_mux.yaml
rb_ares_common/rb_ares_control/launch/: rb_ares_control.launch
rb_ares_common/rb_ares_navigation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
rb_ares_common/rb_ares_navigation/config/costmaps/: global_costmap_params_map.yaml  global_costmap_params_nomap.yaml
rb_ares_common/rb_ares_navigation/config/dockers/: diff_docker.yaml
rb_ares_common/rb_ares_navigation/config/local_planners/: base_local_planner_params.yaml
rb_ares_common/rb_ares_navigation/config/move/: diff_move.yaml
rb_ares_common/rb_ares_navigation/launch/: dockers.launch  move.launch  move_base.launch  navigation_complete.launch  rgbd_to_laserscan.launch  scan_filter.launch
rb_ares_sim/rb_ares_gazebo/: CMakeLists.txt  README.md  package.xml
rb_ares_sim/rb_ares_gazebo/launch/: spawn_simulation.launch
rb_ares_sim/rb_ares_gazebo/models/epal_pallet/: model.sdf
rb_ares_sim/rb_ares_gazebo/rviz/: rviz.rviz
rb_ares_sim/rb_ares_sim/: CMakeLists.txt  package.xml
rb_ares_sim/rb_ares_sim_bringup/: CMakeLists.txt  README.md  package.xml
rb_ares_sim/rb_ares_sim_bringup/config/: elevator_fake_pickup_gazebo.yaml
rb_ares_sim/rb_ares_sim_bringup/env/: robot_params.env
rb_ares_sim/rb_ares_sim_bringup/launch/: rb_ares_complete.launch  run_robot.launch  run_rviz.launch  run_simulation.launch
(+129 files in other folders)
