<?xml version="1.0"?>
<package format="2">
  <name>pallet_truck_control</name>
  <version>0.0.0</version>
  <description>The pallet_truck_control package</description>
 
 <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/pallet_truck_control</url>
  <url type="repository">https://github.com/RobotnikAutomation/pallet_truck_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/pallet_truck_common/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>twist_mux</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
