<?xml version="1.0"?>
<package>
  <name>pallet_truck_description</name>
  <version>1.0.6</version>
  <description>The pallet_truck_description package</description>

  <maintainer email="rguzman@robotnik.es">Roberto Guzmán</maintainer>
  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <url type="website">http://wiki.ros.org/pallet_truck_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/pallet_truck_common.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/pallet_truck_common/issues</url>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>robotnik_sensors</build_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>
  <run_depend>robotnik_sensors</run_depend>
  <run_depend>gazebo_ros</run_depend>

  <export>
      <gazebo_ros gazebo_media_path="package://pallet_truck_description/meshes/bases"/>
  </export>
</package>
