<?xml version="1.0"?>
<package format="2">
  <name>rb_ares_gazebo</name>
  <version>0.0.0</version>
  <description>The rb_ares_gazebo package</description>


  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>rb_ares_control</build_depend>
  <build_depend>rb_ares_description</build_depend>
  <build_depend>hector_gazebo_plugins</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rb_ares_control</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>rb_ares_description</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
      <gazebo_ros gazebo_media_path="${prefix}/models/media/materials/textures"/>
  </export>

</package>
