<?xml version="1.0"?>
<package format="2">
  <name>rb_ares_sim_bringup</name>
  <version>0.0.0</version>
  <description>The rb_ares_sim_bringup package</description>


  <maintainer email="asoriano@robotnik.es">Angel Soriano</maintainer>
  <maintainer email="avillena@robotnik.es">Álvaro Villena</maintainer>
  <maintainer email="dredo@robotnik.es">David Redó</maintainer>
  <maintainer email="aarnal@robotnik.es">Alejandro Arnal</maintainer>
  <maintainer email="mbosch@robotnik.es">Marc Bosch</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
